--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-fastify": "^2.11.0",
     "fastify": "^2.12.1",
+    "graphql": "^14.6.0",
+    "graphql-compose": "^7.14.0",
+    "graphql-compose-mongoose": "^7.3.4",
     "mongoose": "^5.9.5"
   }
 }
